[package]
name = "warp_ws_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
tokio-stream = "0.1.11"
futures = "0.3.24"

sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fake = "2.5"
rand = "0.8"
